Add NVZ (Nitrate Vulnerable Zones) to GRC jurisdictions

--- a/src/ds_caselaw_utils/data/court_names.yaml
+++ b/src/ds_caselaw_utils/data/court_names.yaml
@@ -590,6 +590,9 @@
         - code: InformationRights
           prefix: EA
           name: Information Rights
+        - code: NitrateVulnerableZones
+          prefix: NVZ
+          name: Nitrate Vulnerable Zones
         - code: Pensions
           prefix: PEN
           name: Pensions
